[package]
name = "fbsim-api"
version = "1.0.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbsim-core = { version = "1.0.0-alpha.2", features = ["rocket_okapi"] }
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = { version = "1.0.217", features = ["derive"] }
